Fixed overflow problem when merged files from main branch

--- a/view-container.css
+++ b/view-container.css
@@ -5,6 +5,7 @@
     height: 100%;
     width: 100%;
     padding: 1em;
+    visibility: hidden;
 }
 
 .view-title * {
@@ -13,6 +14,10 @@
 
 [data-view-link-to] {
     cursor: pointer;
+}
+
+.view .transition-wrapper {
+    overflow: hidden;
 }
 
 .view .transition-wrapper * {
